Add support for PvP Arena activity

--- a/__tests__/lynxTitanNamePage.html
+++ b/__tests__/lynxTitanNamePage.html
@@ -75,6 +75,10 @@
         .lmsrank:before {
             content: url('https://www.runescape.com/img/rsp777/game_icon_lmsrank.png?2');
         }
+
+        .pvparenarank:before {
+            content: url('https://www.runescape.com/img/rsp777/game_icon_pvparenarank.png?2');
+        }
     
         .soulwarszeal:before {
             content: url('https://www.runescape.com/img/rsp777/game_icon_soulwarszeal.png?2');
